<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="35dp" />


    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="21dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="114dp"
        app:layout_constraintTop_toBottomOf="@id/gender_label"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="female" />
    </RadioGroup>


    <TextView
        android:id="@+id/hobby_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hobby"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender" />

    <CheckBox
        android:id="@+id/checkBox_sing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sing"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="182dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hobby_label"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox_dance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_sing"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sport"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_dance"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Is Full-time Student?"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="276dp"
        android:textOn="Yes"
        android:textOff="No"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_sport"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/education_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/education"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch2" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:entries="@array/spinner_values"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="No"
        android:textOn="Yes"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_label" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="Send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButton"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="362dp"
        android:layout_height="230dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:srcCompat="@drawable/cat"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>